Fix: Center align search bar and right align signin

--- a/style.css
+++ b/style.css
@@ -30,15 +30,17 @@ body {
   /* header */
   background-color: #e5e4e4;
   grid-column-start: span 4;
-  display: flex;
-  align-items: center;
-  justify-items: center;
 }
 .box-1 ul {
   text-decoration: none;
   list-style: none;
   align-items: right;
   justify-content: right;
+}
+.main-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .box-1 a {
   display: flex;
